[package]
name = "robrix-openclaw-channel"
version = "0.1.0"
edition = "2024"
repository = "ssh://git@github.com/Project-Robius-China/robrix-openclaw-channel.git"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
